# zeitdl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
zeitdl/: __init__.py  exceptions.py  main.py  types.py
zeitdl/core/: __init__.py  download_issue.py  session.py  tasks.py
zeitdl/core/zeitonline/: __init__.py  constants.py  epaper.py  login.py
zeitdl/service/: __init__.py  client.py  credentials.py  download.py
