[tool.poetry]
name = "zeitdl"
version = "0.1.0"
description = "Download PDF issues from Zeit Online"
authors = ["pmeyerra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pylint.main]
fail-under = 10

[tool.pylint.basic]
good-names = ["i", "j", "k", "f"]

[tool.pylint."messages control"]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring"
]
