[tool.poetry]
name = "zeitdl"
version = "0.1.0"
description = "Download PDF issues from Zeit Online"
authors = ["pmeyerra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"
click = "^8.1.3"
structlog = ">=23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "FBT",
    "G004"  # Logging statement uses f-string
]

fix = true
fixable = ["ALL"]
unfixable = []
show-fixes = true

line-length = 88
target-version = "py311"

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

ignore-init-module-imports = true

[tool.ruff.pydocstyle]
convention = "google"
