[project]
name = "zeitdl"
version = "0.1.0"
description = "Download PDF issues from Zeit Online"
authors = [
    {name = "pmeyerra"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "beautifulsoup4>=4.11.1,<5.0",
    "requests>=2.28.2,<3.0",
    "click>=8.1.3,<9.0",
    "structlog>=23.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "FBT",
    "G004"  # Logging statement uses f-string
]

fixable = ["ALL"]
unfixable = []


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"
